--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -57,7 +57,9 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff; }
+  background-color: #fff; 
+  height:100%!important
+}
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
@@ -10374,3 +10376,59 @@ ul ul a {
   -moz-box-shadow: 0px -4px 26px rgba(50, 50, 50, 0.75);
   box-shadow: 0px -4px 26px rgba(50, 50, 50, 0.75);
 }
+
+.mainLayout{
+ 
+  position: relative!important; /* needed for footer positioning*/
+  height: 100vh; /* For 100% screen height */
+  min-height: 100%!important; /* real browsers */
+}
+
+.pushable {
+  height: 100vh!important;
+}
+
+.ui.inverted.menu{
+  background-color:#004B72!important
+}
+
+.user_data_l{
+  color:white;
+  height:250px;
+  margin-top:25px;
+  padding-top:10px
+}
+
+.user_data_l h2, h3{
+color:white;
+}
+
+.toggle-b{
+  border-radius:2px;
+  margin-right:70%;
+  color:#FFF!important;
+  background-color:#004B72!important;
+  border: 1px solid #004B72;
+  height: 48px;
+  width: 48px;
+  font-size: 20px;
+}
+
+.btn-light:hover {
+  color: #004B72;
+  background-color: #e2e6ea;
+  border-color: #dae0e5;
+}
+
+.ui.thin.left.sidebar, .ui.thin.right.sidebar {
+  width: 200px!important;
+}
+
+.ui.visible.thin.left.sidebar~.fixed, .ui.visible.thin.left.sidebar~.pusher {
+  transform: translate3d(200px,0,0)!important;
+}
+
+.profile_form{
+  width:85%
+}
+
