--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10432,3 +10432,41 @@ color:white;
   width:85%
 }
 
+.register_layout{
+  background-color: #004B72;
+  height: 800px;
+  min-height: 100%;
+  position: relative;
+}
+
+.register_form{
+  margin-top: 10%;
+  color: white;
+  font-size: 1.5em;
+  padding-bottom: 20%;
+}
+
+.botones{
+  position: absolute;
+  margin-top: 60px;
+  bottom: 0;
+
+}
+
+.main_div {
+  position: relative;
+  height: 200px;
+  width: 500px;
+  color: #ffffff; 
+}
+.sub_div {
+  position: absolute;
+  
+}
+p {
+  margin-left:110px;
+}
+
+.mov{
+  margin-top: 10px;
+}
