--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10603,10 +10603,6 @@ border-radius: 5px;
   float:left
 }
 
-.finish-text{
-  
-}
-
 .sig-text{
   width:75%!important
 }
@@ -10657,10 +10653,10 @@ float: left;
   margin-top: 10%;
   border-radius: 10%;
   margin-right: 20%;
-  border: 6px solid #72C67D;
+  border: 6px solid #2CA05A;
   font-family: Saira;
   margin-left: 40%;
-  background-color: #72C67D;
+  background-color: #2CA05A;
   color: white;
    }
 
@@ -10682,3 +10678,57 @@ float: left;
    .page-wrapper-app{
      background-color:#004B72 
    }
+
+   .item_menu{
+     height: 27px;
+     width: 27px;
+     font-family: Saira;
+     margin-right: 19px !important;
+   }
+   
+   .item_menu2{
+    height: 27px;
+    width: 27px;
+    font-family: Saira;
+    margin-right: 19px !important;
+  margin-left: -20px !important;
+  }
+
+  .label_cred{
+    font-size: 21px !important; 
+    margin-left: 35px !important;
+  }
+
+  .btns1{
+    margin-top: 10%;
+    border-radius: 5%;
+    margin-right: -2%;
+    border: 8px solid #2CA05A;
+    font-family: Saira;
+    margin-left: 40%;
+    background-color: #2CA05A;
+    color: white;
+  }
+
+  .transparent-inputcredit{
+  background-color:transparent !important;
+  border:none !important;
+  padding: 0px !important;
+  border-bottom: 1px solid #666666 !important;
+  width: 100%;
+  height: 20px;
+  font-weight: 200;
+  }
+
+  .item_menuConfig{
+    height: 27px;
+    width: 27px;
+    font-family: Saira;
+    margin-right: 19px !important;
+    margin-bottom: 37px !important;
+    margin-top: 37px !important;
+  }
+
+  
+
+  
