--- a/src/styles/solicitud.css
+++ b/src/styles/solicitud.css
@@ -67,9 +67,10 @@ box-shadow: 12px 9px 4px -2px rgba(107,106,107,1);
 
 .tarjeta_img{
     position: absolute;
-    top: -97px;
-    left: -79px;
-    z-index:999;    
+    top: -77px;
+    left: -69px;
+    z-index:999;
+    transform: rotate(23deg);    
 }
 
 .tarjeta_contanier{
