--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10719,6 +10719,13 @@ float: left;
     color: white;
   }
 
+  .btnn{
+    border: 8px solid #195D80;
+    color: white;
+    background-color: #195D80;
+    border-radius: 5%;
+    font-family: Saira;
+  }
   .transparent-inputcredit{
   background-color:transparent !important;
   border:none !important;
@@ -10756,6 +10763,7 @@ float: left;
   height: 50px;
   border-bottom: 0px;
   background-color: #ffffff !important;
+  padding: 65px !important;
 }
 
 .modal-title{
@@ -10836,19 +10844,19 @@ border: 0px solid #000000;
    
     left: 65%;
     color: black;
-    top: -15px;
+    top: 0px;
     background-color: transparent;
     font-size: initial;
-    padding: 30px;
+    padding: 24px;
     font-family: Saira;
     
   }
 
   .img-responsive1{
-    width: 64%;
-    height: 65px;
-    border-radius: 50%;
-    margin-left: 37px;
+    width: 125%;
+    height: 95px;
+    border-radius: 15%;
+    margin-left: -32px;
     
   }
 
@@ -10857,30 +10865,62 @@ border: 0px solid #000000;
   }
 
   .btn-cr{
-    border: 0px;
+    border: 8px solid #2CA05A;
     margin-top: 10px;
+    border-radius: 5%;
+    font-family: Saira;
+    background-color: #2CA05A;
+    color: white;
+    font-size: 12px;
+  }
+
+  .btn-crr{
+    border: 8px solid #CCCCCC;
+    margin-top: 10px;
+    border-radius: 5%;
+    font-family: Saira;
+    background-color: #CCCCCC;
+    color: #57869E;
+    font-size: 12px;
   }
 
  
   .item-c-1{
     background-color: #FFC700;
-    padding-top: 10px;
+    padding-top: 30px;
+    text-align: center;
+  }
+
+  .item-c-11{
+    background-color: #3897AE;
+    padding-top: 30px;
+    text-align: center;
   }
 
   .item-c-a{
     background-color: #72C67D;
     padding-top: 10px;
+    
+  }
+
+  .item-c-aa{
+    background-color: #3897AE;
+    padding-top: 41px;
+    color: white;
+    
   }
 
   .item-c-b{
     background-color: #D74685;
     padding-top: 10px;
+    text-align: center;
   }
 
   .item-c-2, .item-c-3, .item-c-4, .item-c-5{
     border-top: 2px solid #CCCCCC;
     border-bottom: 2px solid #CCCCCC;
-    padding-top: 10px;
+    padding-top: 0px;
+
   }
 
   .item-c-6{
@@ -10909,6 +10949,26 @@ border: 0px solid #000000;
     height: 35px;
   }
 
-  
+  .pe{
+    font-family: Saira;
+  }
+
+  .neggo_invoice{
+    width: 112px;
+    padding: 10px;
+    margin-top: 3.5rem !important;
+    
+  }
+
+ 
+  .btn-verdee{
+    margin-top: 20px;
+    border-radius: 1% !important;
+    border: 3px solid #2CA05A !important;
+    font-family: Saira !important;
+    background-color: #2CA05A !important;
+    color: white !important;
+    font-size: 12px;
+  }
 
   
